syntax = "proto3";

package mudahkv;

option go_package = "pb";

service MudahKV {
	rpc Get (GetRequest) returns (GetReply) {}
	rpc Set (SetRequest) returns (SetReply) {}
	rpc List (ListRequest) returns (ListReply) {}
}

message GetRequest {
	string key = 1;
}

message GetReply {
	string key = 1;
	string value = 2;
}

message SetRequest {
	string key = 1;
	string value = 2;
}

message SetReply {
	string key = 1;
	string value = 2;
}

message ListRequest {
	string prefix = 1;
}

message ListReply {
	repeated GetReply values = 1;
}
